--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         Mais bon, j’ai trop dit de choses. <br>
         C’est le temps de terminer. <br>
         Encore une fois, je t’aime. <br>
-        Et, Bonne Fête, mon cœur. <br>
+        Et, Bonne Fête, mon cœur. <br> <br> <br>
 
         Allo, mon cœur. <br>
         Aujourd’hui, on est le 9 aout, 2024. <br>
