--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         Alors lit mes prochains mots les plus profonds, et trouve dans ton cœur le pardon que je demande: <br>
         <br>
         Joyce, de tout mon cœur, je m’excuse. <br> 
-        J’ai fait quelque chose d’impardonnable. <br>
+        J’ai fait quelque chose d’impardonnable, et je le sais. <br>
         J’ai brisé ta confiance, et je t’ai trahi. <br>
         En une seule soirée, je nous ai ruinés. <br>
         Et il n'y a rien dans le monde que je ne ferais pas pour retourner le temps. <br>
@@ -90,20 +90,30 @@
         Que moi, je ne te mérite pas. <br>
         Mais malgré tout cela, je t’aime toujours tellement profondément. <br>
         Et j’espère plus que tout que tu m’aimes toujours comme avant. <br>
-        Je suis désolé, ma princesse. <br>
+        Je suis désolé, Joyce. <br>
         Un jour, pardonne-moi, mon cœur. <br>
         Puisque sans toi, ma vie est vide. <br>
         Et sans toi, mon âme est seule. <br>
-        Peut-être que tu ne veux pas l’entendre maintenant. <br>
+        Peut-être que tu ne veux pas l’entendre maintenant, <br>
         Probablement que tu ne veux plus l’entendre du tout. <br>
         Mais moi, je dois te le dire. <br>
-        Je t’aime Joyce. De tout mon cœur et toute mon âme et tout mon corps et tout mon esprit. <br> Je t’aime. <br>
-        Bon. il est temps de terminer. <br>
-        Et de retourner à ma tristesse. <br> 
+        Je t’aime Joyce. <br>
+        De tout mon cœur, <br>
+        De toute mon âme, <br>
+        De tout mon corps, <br>
+        De tout mon esprit, <br> 
+        Je t’aime. <br>
+        J'espère que mes mots t'atteignent un jour. <br>
+        Que tu ouvre cette lettre, et que tu les lise. <br>
+        Que tu comprennes à quel point je suis désolé. <br> 
+        Pour maintenant, je peux juste éspérer. <br>
+        J'éspère qu'on retourne comme avant, que tu me pardonnes, que tu m'aime toujours. <br>
+        Pour maintenant, j'arrètera d'écrire. <br> 
+        Puisque je dois retourner à ma tristesse. <br> 
         J’espère que le temps nous soigne. <br>
         Et que ton amour reste inchangé. <br>
-        Sache une dernière fois, ma vie, 
-        Que je t’aimerai pour tout mon avenir. <br>
+        Sache une dernière fois, ma vie, que je suis réellement désolé. <br>
+        Et que je t’aimerai pour tout mon avenir. <br>
 
         <center> Charbel El-Hayek </center>
         
